--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,7 +14,7 @@
       {%- include gtm_body.html -%}
       {%- endif -%}
 
-      {%- if site.data.about_content.size > 0 -%}
+      {%- if site.about_content.size > 0 -%}
       {%- include about.html -%}
       {%- endif -%}
 
